crates/elm-codegen-derive-tests/tests/compile_fail/unit_struct.rs
use elm_codegen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Empty")]
pub struct Empty;

fn main() {}
